--- a/server/public/mail/Email.html
+++ b/server/public/mail/Email.html
@@ -19,7 +19,7 @@
     
     <main class="d-flex flex-column align-items-center py-4">
       <p>
-        {{htmlText}}
+        "{{htmlText}}"
       </p>
       <p>
         Te has registrado con el siguiente correo: "{{userEmail}}"
@@ -29,7 +29,7 @@
           class="text-decoration-none border-2 rounded-2 p-2 text-success bg-dark-subtle"
           href="{{navigationLink}}"
         >
-          {{linkText}}
+          "{{linkText}}"
         </a>
       </div>
     </main>
