layouts fixed, new navbars & folders

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
       href="/vite.svg"
     />
 
+    <!-- ICONS FONTAWESOME -->
     <script
       src="https://kit.fontawesome.com/f6359370ef.js"
       crossorigin="anonymous"
