--- a/server/public/mail/Email.html
+++ b/server/public/mail/Email.html
@@ -3,33 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./activationEmail.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <style>
+  /* CSS */
+    .mail-body{
+      display: flex;
+      justify-items: center;
+    }
+    .activation-email {
+      text-align: center;
+      background-color: #FAFCFE;
+      border: 2px solid rgba(100, 100, 100, 0.427);
+      border-radius: 1rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      margin-left: 3rem;
+      margin-right: 3rem;
+      width: 40rem;
+      height: 20rem;
+    }
+    .mail-header {
+      text-align: center;
+      background-color: #1C2534;
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+    }
+    .mail-logo {
+      width: 60%;
+    }
+    .mail-main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
+    .main-bott {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+      text-align: center;
+    }
+    .mail-link {
+      text-decoration: none;
+      border: 2px solid rgba(100, 100, 100, 0.427);
+      border-radius: 1rem;
+      padding: 0.5rem;
+      background-color: #00D47E;
+    }
+    .link-span {
+      color: whitesmoke;
+      font-weight: bold;
+    }
+  </style>
   <title>Correo de Circular Score</title>
 </head>
-<body class="d-flex justify-content-center">
-  <div class="container-xl activation-email border border-2 rounded-5 py-5 w-50">
-    
-    <header class="text-center">
-      <img 
-          class="w-50"
-          src="http://localhost:5173/src/assets/Images/logo/logo.png"
+<body class="mail-body">
+  <div class="activation-email">
+    <header class="mail-header">
+        <img 
+          class="mail-logo" 
+          src="https://www.imagehost.at/image/p7dH7"
         >
     </header>
     
-    <main class="d-flex flex-column align-items-center py-4">
+    <main class="mail-main">
       <p>
-        "{{htmlText}}"
+        {{htmlText}}
       </p>
       <p>
-        Te has registrado con el siguiente correo: "{{userEmail}}"
+        Te has registrado con el siguiente correo: {{userEmail}}
       </p>
-      <div class="py-4">
+      <div class="main-bott">
         <a
-          class="text-decoration-none border-2 rounded-2 p-2 text-success bg-dark-subtle"
+          class="mail-link"
           href="{{navigationLink}}"
         >
-          "{{linkText}}"
+          <span class="link-span">{{linkText}}</span>
         </a>
       </div>
     </main>
