--- a/server/public/mail/Email.html
+++ b/server/public/mail/Email.html
@@ -61,7 +61,8 @@
     <header class="mail-header">
         <img 
           class="mail-logo" 
-          src="https://www.imagehost.at/image/p7dH7"
+          src="cid:logo-circular"
+          alt="Circular Score Logo White"
         >
     </header>
     
